# Vize-Deserialization-Project

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  main.rs  payload_gen.py  secure_server.py  test_rust.py  vulnerable_server.py
.github/workflows/.github/workflows/: main.yml
Security_Engine/: Cargo.toml
Security_Engine/src/: lib.rs
docs/: architecture.md
rust_security_project/: Cargo.toml
rust_security_project/src/: main.rs
src/: lib.rs  main.rs
